--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -14,4 +14,5 @@ jobs:
         server: ftp.cluster027.hosting.ovh.net
         username: ferdink
         password: ${{ secrets.ftp_password }}
+        local-dir: dist/
         server-dir: www/
