--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -15,4 +15,4 @@ jobs:
         username: ferdink
         password: ${{ secrets.ftp_password }}
         local-dir: dist/
-        server-dir: www/
+        server-dir: www/ferd/
