--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
+    "@react-three/fiber": "^8.16.2",
+    "@react-three/postprocessing": "^2.16.2",
+    "@types/three": "^0.164.0",
+    "is-mobile": "^4.0.0",
     "next": "^13.4.9",
     "react": "^18",
     "react-dom": "^18",
-    "react-scroll-parallax": "^3.4.2"
+    "react-scroll-parallax": "^3.4.2",
+    "react-vfx": "^0.5.0",
+    "three": "^0.164.1"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -20,6 +27,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
+    "framer-motion": "^11.1.7",
     "typescript": "^5"
   }
 }
