--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -7,6 +7,15 @@ jobs:
     steps:
     - name: 🚚 Get latest code
       uses: actions/checkout@v3
+
+    - name: use node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18.x'
+
+    - run: npm install
+
+    - run: npm run build
     
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
