--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -20,8 +20,8 @@ jobs:
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
-        server: ftp.cluster027.hosting.ovh.net
-        username: ferdink
+        server: ${{ secrets.ftp_url }}
+        username: ${{ secrets.ftp_username }}
         password: ${{ secrets.ftp_password }}
         local-dir: dist/
         server-dir: www/ferd/
