--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/three": "^0.164.0",
     "is-mobile": "^4.0.0",
     "next": "^13.4.9",
+    "phosphor-react": "^1.4.1",
     "react": "^18",
     "react-dom": "^18",
     "react-scroll-parallax": "^3.4.2",
