--- a/public/.htaccess
+++ b/public/.htaccess
@@ -7,4 +7,4 @@ RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
 # SPA fallback: routes to index.html
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /ferd/index.html [L]
+RewriteRule . /index.html [L]
