--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "protolio",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build && next export",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
@@ -14,10 +14,10 @@
     "@react-three/postprocessing": "^2.16.2",
     "@types/three": "^0.164.0",
     "is-mobile": "^4.0.0",
-    "next": "^13.4.9",
     "phosphor-react": "^1.4.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-router-dom": "^6.23.1",
     "react-scroll-parallax": "^3.4.2",
     "react-vfx": "^0.5.0",
     "three": "^0.164.1"
@@ -26,9 +26,10 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vitejs/plugin-react": "^4.3.2",
     "eslint": "^8",
-    "eslint-config-next": "13.5.6",
-    "framer-motion": "^11.1.7",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vite": "^5.4.2",
+    "vite-tsconfig-paths": "^4.3.2"
   }
 }
